<resources>
    <string name="app_name">GetHub</string>
    <string name="app_tagline">Your Gateway to Freelance Success</string>

    <string name="title_home">Home</string>
    <string name="title_project">Project</string>
    <string name="title_gethub">Gethub</string>
    <string name="title_analitic">Analitic</string>
    <string name="title_akun">Akun</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="login">Masuk</string>
    <string name="login_with_google_desc">Login with Google</string>
    <string name="login_with_linkedin_desc">Login with Linkedin</string>
    <string name="dont_have_an_account">Belum punya akun? Daftar</string>
    <string name="have_an_account">Sudah punya akun? Masuk</string>
    <string name="register">Daftar</string>
    <string name="field_couldnt_be_empty">Field tidak boleh kosong</string>
    <string name="please_input_a_valid_email">Masukkan email yang valid</string>
    <string name="password_should_not_less_than_8">Password tidak kurang dari 8 karakter</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="something_went_wrong">Terjadi kesalahan</string>
    <string name="image_unavailable">Gambar tidak tersedia</string>
    <string name="take_picture">Ambil Foto</string>
    <string name="choose_form_gallery">Pilih dari Galeri</string>
    <string name="cancel">Batal</string>
    <string name="name_field_couldn_be_empty">Nama tidak boleh kosong</string>
    <string name="profession_field_couldn_be_empty">Profesi tidak boleh kosong</string>
    <string name="website_field_couldn_be_empty">Website tidak boleh kosong</string>
    <string name="phone_field_couldn_be_empty">Phone tidak boleh kosong</string>
    <string name="address_field_couldn_be_empty">Alamat tidak boleh kosong</string>
    <string name="about_field_couldn_be_empty">About tidak boleh kosong</string>
    <string name="login_success">Login berhasil</string>
    <string name="image_succesfully_uploaded">Gambar berhasil diunggah</string>
    <string name="onboarding_heading_one">Deteksi Keaslian Project\nDengan Fraud Project Detection</string>
    <string name="onboarding_heading_two">Beri Project Dan Bidding\nProject yang Cocok</string>
    <string name="onboarding_heading_three">Dapatkan Users Bids\nFreelancer Terbaik Di Gethub</string>
    <string name="onboarding_heading_four">Scan Kartu Bisnis dan\nBagikan Portofolio Digital Kamu\ndengan Mudah</string>
    <string name="onboarding_heading_five">Dapatkan Informasi Seminar, Pelatihan, Workshop, dan Acara yang Sesuai dengan Profesi Kamu</string>
    <string name="onboarding_heading_six">Komunikasi Lebih Mudah Dan Aman\nDengan fitur Chating DI GetHub</string>
    <string name="onboarding_desc_one">Garda terdepan Anda dalam melawan penipuan. Dengan
teknologi canggih, secara otomatis memeriksa proyek-proyek
untuk mengidentifikasi yang mencurigakan dan memberikan
 Anda ketenangan pikiran saat mengeksplorasi peluang baru</string>
    <string name="onboarding_desc_two">Tawarkan Pekerjaan dan Temukan Penawaran yang Pas!
Pilih Penawar yang Cocok dengan Kebutuhan Anda!
Temukan Kemudahan Dalam Setiap Langkah</string>
    <string name="onboarding_desc_three">Gethub akan merekomendasikan freelancer yang sesuai dengan portofolio dan sertifikasi kategori proyek kamu. Rekomendasi diurutkan berdasarkan identitas terverifikasi, analisis sentimen review, total proyek yang pernah dikerjakan, dan status akun premium untuk mendapatkan freelancer terbaik.</string>
    <string name="onboarding_desc_four">Scan Dan Simpan Kartu Bisnis Rekan Anda
Lalu Buat Kartu Bisnis Dan Profil Website Anda Gratis!
Sebarkan Kartu dan Profil Bisnis Anda Sekarang!</string>
    <string name="onboarding_desc_five">Gethub akan mengrekomendasikan Seminar, Pelatihan, Workshop, dan Acara yang Sesuai dengan Profesi Kamu. Upgrade diri mu menjadi high value people bersama Gethub</string>
    <string name="onboarding_desc_six">Nikmati kemudahan berkomunikasi dengan project owner atau freelancer melalui fitur chatting Gethub. Data dan privasi Anda dijamin aman di sini, memungkinkan kolaborasi tanpa hambatan dalam lingkungan yang terpercaya.</string>


    <string name="sponsor_image_description">Sponsor</string>
    <string name="please_login_again">Silahkan login kembali</string>
    <string name="failed_to_fetch_categories">Gagal mendapatkan kategori</string>
    <string name="search_project_hint">Cari project</string>
    <string name="post_project_warning">Pastikan untuk tidak bertransaksi di luar aplikasi dan hindari menghubungi langsung pengguna yang menawarkan bid. Aplikasi telah dilengkapi dengan sistem Machine Learning untuk memeriksa keaslian Project yang kamu berikan. Pelanggaran aturan ini dapat mengakibatkan pembekuan akunmu.</string>
    <string name="account_is_not_verified">Akun belum terverifikasi</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="digital_contract_url">https://gethub-webporto-kot54pmj3q-et.a.run.app/project/{endpoint}</string>
</resources>