<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">


    <LinearLayout
        android:id="@+id/llTapAja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="47dp"
            android:layout_height="47dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/gethub_logo" />

        <TextView
            style="@style/Poppins.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Get"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            style="@style/Poppins.Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hub"
            android:textColor="@color/md_theme_primary"
            android:textSize="40sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvSocialCommunityApplication"
        style="@style/Nunito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Daftarkan Akun dan Buat Kartu Bisnis Anda"
        android:textColor="@color/md_theme_primary_highContrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llTapAja" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="Nama Sesuai KTP"
        android:textColor="@color/md_theme_primary_highContrast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSocialCommunityApplication" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextField"
        style="@style/AuthTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="3dp"
        android:minHeight="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/md_theme_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nama Sesuai KTP" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="11dp"
        android:text="@string/email"
        android:textColor="@color/md_theme_primary_highContrast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField"
        style="@style/AuthTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="3dp"
        android:minHeight="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/md_theme_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="11dp"
        android:text="@string/password"
        android:textColor="@color/md_theme_primary_highContrast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextField" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        style="@style/AuthTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="3dp"
        android:minHeight="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconTint="@color/md_theme_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbAgreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="Baca syarat dan ketentuan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />


        <TextView
            android:id="@+id/tvTermsCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2.5dp"
            android:clickable="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="Di sini"
            android:textColor="@color/md_theme_primary_highContrast"
            app:layout_constraintStart_toEndOf="@id/cbAgreement"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextField" />

    </LinearLayout>


    <Button
        android:id="@+id/btnRegister"
        style="@style/AuthButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@+id/llAgreement"
        tools:layout_editor_absoluteX="40dp" />

    <LinearLayout
        android:id="@+id/llDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:background="@color/md_theme_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="Atau"
            android:textColor="@color/md_theme_primary_highContrast" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:background="@color/md_theme_primary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSocialAuthButtons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/llDivider">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:focusable="true"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/login_with_google_desc"
                android:src="@drawable/ic_google" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnLinkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="28dp"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/login_with_linkedin_desc"
                android:src="@drawable/ic_linkedin" />

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <Button
        android:id="@+id/btnToLogin"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="0dp"
        android:text="@string/have_an_account"
        android:textColor="@color/md_theme_primary_highContrast"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSocialAuthButtons" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>

